--- a/index_files/custom.css
+++ b/index_files/custom.css
@@ -112,7 +112,7 @@ span {
 }
 
 .mb-logo,.mb-logo-inside {
-	background:url(../img/wlogo.png) no-repeat;
+	background:url(../index_files/wlogo.png) no-repeat;
 	display:block;
 	width:228px;
 	height:74px;
