--- a/index_files/custom.css
+++ b/index_files/custom.css
@@ -44,7 +44,7 @@ html {
 }
 
 .mb-home {
-	background:url(../index_files/background.png) no-repeat center top fixed #142743;
+	background:url(../index_files/background.jpg) no-repeat center top fixed #142743;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	-o-background-size:cover;
