--- a/index_files/custom.css
+++ b/index_files/custom.css
@@ -112,7 +112,7 @@ span {
 }
 
 .mb-logo,.mb-logo-inside {
-	background:url(../index_files/wlogo.png) no-repeat;
+	background:url(../index_files/logo.png) no-repeat;
 	display:block;
 	width:300px;
 	height:74px;
@@ -979,7 +979,7 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 
 @media (max-width:800px) {
 	.mb-logo {
-		background:url(../index_files/wlogo@2x.png) no-repeat;
+		background:url(../index_files/logo@2x.png) no-repeat;
 		background-size:100% 100%;
 		display:block;
 		width:228px;
