--- a/index_files/custom.css
+++ b/index_files/custom.css
@@ -122,7 +122,7 @@ span {
 }
 
 .mb-logo-inside {
-	background-image:url(../img/clogo.png);
+	background-image:url(../index_files/clogo.png);
 }
 
 .mb-navbar .navbar-nav > li > a,
