--- a/index_files/custom.css
+++ b/index_files/custom.css
@@ -180,20 +180,20 @@ span {
 	height:7px;
 	margin-left:2px;
 	vertical-align:middle;
-	background:url(../img/up.png);
+	background:url(../index_files/up.png);
 }
 
 .mb-inner .mb-indicator {
-    background: url(../img/upb.png)
+    background: url(../index_files/upb.png)
 }
 
 .mb-navbar .dropdown.open .mb-indicator,
 .mb-language.open .mb-indicator {
-	background-image:url(../img/down.png);
+	background-image:url(../index_files/down.png);
 }
 
 .mb-inner .mb-language.open .mb-indicator {
-    background-image: url(../img/downb.png)
+    background-image: url(../index_files/downb.png)
 }
 
 .mb-navbar.navbar-default .navbar-toggle {
@@ -332,7 +332,7 @@ span {
 
 #mb-block2 .item .shadow2,#mb-block2 .item .shadow {
 	position:absolute;
-	background:url(../img/shadow.png);
+	background:url(../index_files/shadow.png);
 	width:100%;
 	height:100%;
 	display:block;
@@ -346,7 +346,7 @@ span {
 }
 
 #mb-block2 .item .shadow2 {
-	background-image:url(../img/shadow2.png);
+	background-image:url(../index_files/shadow2.png);
 }
 
 #mb-block2 .item .shadow2:hover,#mb-block2 .item .shadow:hover {
@@ -483,7 +483,7 @@ span {
 	display:inline-block;
 	width:30px;
 	height:30px;
-	background:url(../img/facebook.png);
+	background:url(../index_files/facebook.png);
 	-webkit-background-size:100% 100%;
 	-moz-background-size:100% 100%;
 	-o-background-size:100% 100%;
@@ -493,15 +493,15 @@ span {
 }
 
 #mb-block4 .redes a.twitter {
-	background-image:url(../img/twitter.png);
+	background-image:url(../index_files/twitter.png);
 }
 
 #mb-block4 .redes a.instagram {
-	background-image:url(../img/instagram.png);
+	background-image:url(../index_files/instagram.png);
 }
 
 #mb-block4 .redes a.pinterest {
-	background-image:url(../img/pinterest.png);
+	background-image:url(../index_files/pinterest.png);
 }
 
 select,textarea,input[type="text"],input[type="password"],input[type="datetime"],input[type="datetime-local"],input[type="date"],input[type="month"],input[type="time"],input[type="week"],input[type="number"],input[type="email"],input[type="url"],input[type="search"],input[type="tel"],input[type="color"] {
@@ -510,7 +510,7 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 
 #mb-up {
 	display:block;
-	background:url(../img/uparrow.jpg);
+	background:url(../index_files/uparrow.jpg);
 	width:80px;
 	height:80px;
 	float:right;
@@ -570,7 +570,7 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 }
 
 .mb-menu {
-	background:url(../img/menu.png) no-repeat center 20px;
+	background:url(../index_files/menu.png) no-repeat center 20px;
 	text-transform:uppercase;
 	display:block;
 	width:80px;
@@ -590,7 +590,7 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 
 .mb-menu.opened {
 	position:fixed;
-	background-image:url(../img/close.png);
+	background-image:url(../index_files/close.png);
 	background-color:#003a6e;
 	color:#00a7e0;
 }
@@ -651,7 +651,7 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 }
 
 .mb-inside footer,.mb-products footer {
-	background:url(../img/footerbk.jpg) center center;
+	background:url(../index_files/footerbk.jpg) center center;
 	padding-top:40px;
 }
 
