--- a/Frutas_files/custom.css
+++ b/Frutas_files/custom.css
@@ -292,6 +292,8 @@ span {
 	padding:90px 80px 10px;
 }
 
+
+
 #mb-block1 a.mas {
 	border-color:#0c1c33;
 	color:#142641;
@@ -1193,7 +1195,7 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 .containers{
 	width: 100%;
 	max-width: 1200px;
-	height: 150px;
+	height: 130px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
@@ -1206,7 +1208,7 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 }
 
 .containers .card{
-	width: 200px;
+	width: 170px;
 	height: 238px;
 	border-radius: 2px;
 	box-shadow: 0 2px 2px rgba(255, 255, 255, 255);
@@ -1227,8 +1229,8 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 }
 
 .containers .card img{
-	width: 190px;
-	height: 170px;
+	width: 140px;
+	height: 130px;
 }
 
 .containers .card p{
@@ -1264,13 +1266,20 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 @media screen and (max-width: 1000px){
 	.containers{
 		width: 100%;
-		bottom: 121px;
+		bottom: 105px;
 	}
 	.containers .card{
-		width: 100px;
-		height: 115px;
+		width: 80px;
+		height: 100px;
 
 	}
+	.containers .card h4{
+	font-size: 15px;
+}
+.containers .card a{
+	font-size: 15px;
+	text-decoration: none;
+	color: #3498db;
 }
 
 @media screen and (max-width: 800px){
