--- a/Frutas_files/custom.css
+++ b/Frutas_files/custom.css
@@ -1202,9 +1202,8 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 	margin: auto;
 	z-index: 1;
 	position: absolute;
-	left: 300px;
-	bottom: 130px;
-	
+	left: 240px;
+	bottom: 130px;	
 }
 
 .containers .card{
@@ -1226,6 +1225,7 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 
 .containers .card h4{
 	font-weight: 600;
+	color: white;
 }
 
 .containers .card img{
@@ -1242,6 +1242,7 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 	font-weight: 500;
 	text-decoration: none;
 	color: #3498db;
+	color: white;
 }
 
 @media screen and (max-width: 1200px){
