--- a/Banano_files/custom.css
+++ b/Banano_files/custom.css
@@ -698,6 +698,8 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 	text-indent:-9999px;
 	margin-top:40px;
 	margin-bottom:40px;
+	position: relative;
+	top: 200px;
 }
 
 .mb-navbar.bottom {
@@ -1516,6 +1518,180 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 		width: 60px;
 		height: 60px;
 	}
+}
+
+@media ( max-width: 30em){
+
+	.po{
+	position: absolute;
+	top: 160px;
+    left: 20px;
+    font-size:11px;
+}
+
+.po_n{
+	position: absolute;
+	top: 140px;
+    left: 18px;
+    
+    font-size: 13px;
+
+}
+
+.po_l{
+	position: absolute;
+	top: 140px;
+    left: 40px;
+    font-size:13px;
+    opacity: 50%;
+}
+
+.ca{
+	position: absolute;
+	top: 160px;
+    left: 84px;
+    font-size:11px;
+}
+
+.ca_n{
+	position: absolute;
+	top: 140px;
+    left: 92px;
+    font-size: 13px;
+}
+
+.pro{
+	position: absolute;
+	top: 160px;
+    left: 157px;
+    font-size:11px;
+}
+
+.pro_n{
+	position: absolute;
+	top: 140px;
+    left: 162px;
+    font-size: 13px;
+}
+
+.pro_l{
+	position: absolute;
+	top: 140px;
+    left: 182px;
+    font-size: 13px;
+    opacity: 50%;
+}
+
+.so{
+	position: absolute;
+	top: 160px;
+    left: 238px;
+    font-size:11px;
+}
+
+.so_n{
+	position: absolute;
+	top: 140px;
+    left: 238px;
+    font-size: 13px;
+}
+
+.so_l{
+	position: absolute;
+	top: 140px;
+    left: 245px;
+    font-size: 13px;
+    opacity: 50%;
+}
+
+.co{
+	position: absolute;
+	top: 160px;
+    left: 293px;
+    font-size:11px;
+}
+
+.co_n{
+	position: absolute;
+	top: 140px;
+    left: 303px;
+    font-size: 13px;
+}
+
+.co_l{
+	position: absolute;
+	top: 140px;
+    left: 312px;
+    font-size: 13px;
+    opacity: 50%;
+}
+
+.caracts{
+	position: absolute;
+	top: 272px;
+    left: 0px;
+    font-size: 20px;
+}
+
+
+
+
+	table{
+		width: 100%;
+	}
+	table tr{
+		display: flex;
+		flex-direction: column;
+		border:1px solid grey;	
+		width: 338px;
+
+	}
+	table td{
+		display: flex;
+		width: 338px;
+	}
+
+	table th{
+		display: flex;
+		width: 338px;
+
+	}
+
+.tg{
+	position: absolute;
+	left: -180px;
+	top: -200px;
+}
+
+.tg_D{
+	position: absolute;
+	left: -180px;
+	top: 750px;
+}
+
+.mb-inside footer,.mb-products footer {
+	position: relative;
+	background:url(../Banano_files/footerbk.jpg) center center;
+	padding-top:40px;
+	top: 1730px;
+}
+
+#mb-up {
+	position: absolute;
+	display:block;
+	background:url(../Banano_files/uparrow.jpg);
+	width:70px;
+	height:70px;
+	float:right;
+	text-indent:-9999px;
+	margin-top:40px;
+	margin-bottom:40px;
+	position: relative;
+	top: 1760px;
+	left: 14px;
+}
+
+
 }
 
 
