--- a/index_files/custom.css
+++ b/index_files/custom.css
@@ -347,6 +347,7 @@ span {
 
 #mb-block2 .item .shadow2 {
 	background-image:url(../index_files/shadow2.png);
+	top:24px;
 }
 
 #mb-block2 .item .shadow2:hover,#mb-block2 .item .shadow:hover {
