--- a/index_files/custom.css
+++ b/index_files/custom.css
@@ -112,7 +112,7 @@ span {
 }
 
 .mb-logo,.mb-logo-inside {
-	background:url(../index_files/logo.png) no-repeat;
+	background:url(../index_files/logo4.png) no-repeat;
 	display:block;
 	width:450px;
 	height:160px;
