--- a/Exportaciones_files/custom.css
+++ b/Exportaciones_files/custom.css
@@ -651,7 +651,7 @@ select,textarea,input[type="text"],input[type="password"],input[type="datetime"]
 }
 
 .mb-inside footer,.mb-products footer {
-	background:url(../img/footerbk.jpg) center center;
+	background:url(../Exportaciones_files/footerbk.jpg) center center;
 	padding-top:40px;
 }
 
